--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "# Ingresa tu nombre de usuario y contraseña\n",
     "username = 'urielemilianomendez@hotmail.com'\n",
-    "password = 'Palito1045082757?'\n",
+    "password = 'xxxxxxx'\n",
     "username_field.send_keys(username)\n",
     "password_field.send_keys(password)\n",
     "\n",
