Fixed some bugs in functions.py

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.72\n"
+     ]
+    }
+   ],
    "source": [
     "#1\n",
     "client.Open_Pinterest()"
@@ -83,9 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.75\n",
+      "0.59\n",
+      "1.47\n",
+      "5.97\n"
+     ]
+    }
+   ],
    "source": [
     "#2\n",
     "client.Log_In(email = df_accounts.iloc[0]['PINTEREST EMAIL'],\n",
@@ -95,11 +114,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.99\n",
+      "2.64\n"
+     ]
+    }
+   ],
    "source": [
     "client.Create_Pin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['    def Create_Pin(self):',\n",
+       " '        try:',\n",
+       " '            crear_button = WebDriverWait(self.driver, 10).until(',\n",
+       " '                EC.element_to_be_clickable((By.XPATH, \"//span[contains(text(), \\'Create\\')]\"))',\n",
+       " '            )',\n",
+       " '            crear_button.click()',\n",
+       " '',\n",
+       " '            self.Random_Duration_Action(1.4,2.13)',\n",
+       " '',\n",
+       " '            crear_pin_button = WebDriverWait(self.driver, 10).until(',\n",
+       " '            EC.element_to_be_clickable((By.XPATH, \"//span[contains(text(), \\'Create Pin\\')] | //div[contains(text(), \\'Create Pin\\')]\"))',\n",
+       " '            )',\n",
+       " '            crear_pin_button.click()',\n",
+       " '',\n",
+       " '        except Exception as e:',\n",
+       " '            crear_button = WebDriverWait(self.driver, 10).until(',\n",
+       " '                EC.element_to_be_clickable((By.XPATH, \"//div[contains(text(), \\'Business hub\\')]\"))',\n",
+       " '            )',\n",
+       " '            crear_button.click()',\n",
+       " '',\n",
+       " '            self.Random_Duration_Action(1.4,2.13)',\n",
+       " '',\n",
+       " '            crear_pin_button = WebDriverWait(self.driver, 10).until(',\n",
+       " '            EC.element_to_be_clickable((By.XPATH, \"//span[contains(text(), \\'Create Pin\\')] | //div[contains(text(), \\'Create Pin\\')]\"))',\n",
+       " '            )',\n",
+       " '            crear_pin_button.click()',\n",
+       " '',\n",
+       " '        ',\n",
+       " '        self.Random_Duration_Action(2,5)',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "f = inspect.getsource(client.Create_Pin)\n",
+    "f.split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method PinterestClient.Create_Pin of <python_scripts.functions.PinterestClient object at 0x000001B364BB3550>>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.Create_Pin"
    ]
   },
   {
