--- a/nb.ipynb
+++ b/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.72\n"
+      "3.21\n"
      ]
     }
    ],
@@ -91,24 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.75\n",
-      "0.59\n",
-      "1.47\n",
-      "5.97\n"
+      "1.55\n",
+      "0.89\n",
+      "1.6\n",
+      "5.67\n"
      ]
     }
    ],
    "source": [
     "#2\n",
-    "client.Log_In(email = df_accounts.iloc[0]['PINTEREST EMAIL'],\n",
-    "        password = df_accounts.iloc[0]['PINTEREST PASSWORD'])\n",
+    "client.Log_In(email = 'xxxxx@gmail.com',\n",
+    "        password = 'xxxxxxx')\n",
     "#3"
    ]
   },
